4 files modified, 3 added, 2 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,64 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+
+
+<div class="container">
+
+  <h2 class="sectionTitle">Space</h2>
+  <div class="section">
+    <span class="spaceBox xxxxl"></span>
+    <span class="spaceBox xxxl"></span>
+    <span class="spaceBox xxl"></span>
+    <span class="spaceBox xl"></span>
+    <span class="spaceBox m"></span>
+    <span class="spaceBox s"></span>
+    <span class="spaceBox xs"></span>
+    <span class="spaceBox xxs"></span>
+    <span class="spaceBox xxxs"></span>
+  </div>
+
+  <h2 class="sectionTitle">Typography</h2>
+  <div class="section">
+    <span class="text xxs">The quick bold fox</span>
+    <span class="text xs">The quick bold fox</span>
+    <span class="text s">The quick bold fox</span>
+    <span class="text m">The quick bold fox</span>
+    <span class="text l">The quick bold fox</span>
+    <span class="text xl">The quick bold fox</span>
+    <span class="text xxl">The quick bold fox</span>
+  </div>
+
+  <h2>Color</h2>
+  <div class="section">
+    <span class="colorBox red xx-light"></span>
+    <span class="colorBox red x-light"></span>
+    <span class="colorBox red light"></span>
+    <span class="colorBox red"></span>
+    <span class="colorBox red dark"></span>
+    <span class="colorBox red x-dark"></span>
+    <span class="colorBox red xx-dark"></span>
+
+    <span class="colorBox green xx-light"></span>
+    <span class="colorBox green x-light"></span>
+    <span class="colorBox green light"></span>
+    <span class="colorBox green"></span>
+    <span class="colorBox green dark"></span>
+    <span class="colorBox green x-dark"></span>
+    <span class="colorBox green xx-dark"></span>
+
+    <span class="colorBox blue xx-light"></span>
+    <span class="colorBox blue x-light"></span>
+    <span class="colorBox blue light"></span>
+    <span class="colorBox blue"></span>
+    <span class="colorBox blue dark"></span>
+    <span class="colorBox blue x-dark"></span>
+    <span class="colorBox blue xx-dark"></span>
+
+    <span class="colorBox gray xx-light"></span>
+    <span class="colorBox gray x-light"></span>
+    <span class="colorBox gray light"></span>
+    <span class="colorBox gray"></span>
+    <span class="colorBox gray dark"></span>
+    <span class="colorBox gray x-dark"></span>
+    <span class="colorBox gray xx-dark"></span>
+  </div>
+
+</div>
